@@ -24,7 +24,7 @@ def OBSAH():
 
 def CAT_VOYO(url):
     doc = read_page(url)
-    zakazane = ['/serialy/1827-tudorovci-sex-moc-a-intrigy','/serialy/1826-sudkyna-hattchetova','/serialy/1824-dr-oz','/serialy/1691-comeback-i','/serialy/1693-dokonaly-svet-i','/serialy/1775-v-dobrom-aj-v-zlom']
+    zakazane = ['/serialy/1691-comeback-i','/serialy/1693-dokonaly-svet-i']
     items = doc.find('div', 'productsList')    
     for item in items.findAll('div', 'section_item'):
         porad = item.find('div', 'poster')
@@ -86,16 +86,16 @@ def LIST_VOYO(url):
 
               
 def VIDEOLINK_VOYO(url,name):
-    req = urllib2.Request(url)
-    req.add_header('User-Agent', _UserAgent_)
-    response = urllib2.urlopen(req)
-    httpdata = response.read()
-    response.close()
-    param1 = re.compile('mainVideo = new mediaData\((.+?), (.+?), (.+?),').findall(httpdata)    
-    for prod,unit,media in param1:
-        conn1 = prod
-        conn2 = unit
-        conn3 = media
+    #req = urllib2.Request(url)
+    #req.add_header('User-Agent', _UserAgent_)
+    #response = urllib2.urlopen(req)
+    #httpdata = response.read()
+    #response.close()
+    #param1 = re.compile('mainVideo = new mediaData\((.+?), (.+?), (.+?),').findall(httpdata)    
+    #for prod,unit,media in param1:
+        #conn1 = prod
+        #conn2 = unit
+        #conn3 = media
     URL2ALIAS = {'rodinna-kliatba':'rodkliatba',
                  'druhy-dych':'druhydych',
                  'mesto-tienov':'mestotienov',
@@ -112,10 +112,10 @@ def VIDEOLINK_VOYO(url,name):
                  'zo-zakulisia-markizy':'zakulisie',
                  'na-telo':'natelo',
                  'modre-z-neba':'mzn',
-                 'bez-servitky':'bezservitky',
+                 'bez-servitky':'servitka',
                  'mafianske-popravy':'popravy',
-                 'tudorovci-sex-moc-a-intrigy':'tudorovci',
-                 'sudkyna-hattchetova':'hattchetova',
+                 'tudorovci-sex-moc-a-intrigy':'tudors',
+                 'sudkyna-hattchetova':'sudkyna',
                  'dr-oz':'droz',
                  'comeback-i':'comebacki',
                  'v-dobrom-aj-v-zlom':'vdobrom',                 
@@ -140,7 +140,8 @@ def VIDEOLINK_VOYO(url,name):
     print jmeno,den,mesic,rok,cesta
     swfurl = 'http://voyo.markiza.sk/static/shared/app/flowplayer/13-flowplayer.cluster-3.2.1-01-004.swf'
     #lqurl = 'rtmpe://vod.markiza.sk/voyosk playpath='+cesta+' pageUrl='+url+' swfUrl='+swfurl+' swfVfy=true'
-    lqurl = 'rtmpe://vod.markiza.sk/voyosk playpath='+cesta+' conn=O:1 conn=NN:0:'+conn3+'.000000 conn=NS:1: conn=NN:2:'+conn1+'.000000 conn=NS:3:null conn=O:0 pageUrl='+url+' swfUrl='+swfurl+' swfVfy=true'    
+    lqurl = 'rtmpe://vod.markiza.sk/voyosk playpath='+cesta+' app=voyosk flashver=WIN11,1,102,62 conn=O:1 conn=NN:0:2279338.000000 conn=NS:1: conn=NN:2:1847.000000 conn=NS:3:null conn=O:0 pageUrl='+url+' swfUrl='+swfurl+' swfVfy=true'
+    #lqurl = 'rtmpe://vod.markiza.sk/voyosk playpath='+cesta+' app=voyosk flashver=WIN11,1,102,62 conn=O:1 conn=NN:0:'+conn3+'.000000 conn=NS:1: conn=NN:2:'+conn1+'.000000 conn=NS:3:null conn=O:0 pageUrl='+url+' swfUrl='+swfurl+' swfVfy=true'
     #lqurl = 'rtmpe://vod.markiza.sk/voyosk playpath='+cesta+' conn=O:1 conn=NN:0:'+conn3+'.000000 conn=NS:1:'+conn1+'.000000 conn=NN:2:'+conn2+'.000000 conn=NS:3:null conn=O:0 pageUrl='+url+' swfUrl='+swfurl+' swfVfy=true'    
 
     addLink(name,lqurl,icon,name)
